--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1>Chào mừng đến với Khóa học HTML</h1>
+    <h1 Color: Red>Chào mừng đến với thử thách lập trình HTML</h1>
     <h2 id="level-title">Nhiệm vụ Level 1: Viết tiêu đề</h2>
     <p id="level-desc">Viết một thẻ tiêu đề &lt;h1&gt; với nội dung "Chào mừng đến với khóa học HTML"</p>
     
